Added few anchor tags for page navigation

--- a/customer/signin.html
+++ b/customer/signin.html
@@ -11,7 +11,9 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required><br><br>
 
-        <input type="submit" value="Sign In">
+        <input type="submit" value="Sign In"><br><br>
+
+        <a href="signup.html">Don't have an account?</a>
     </form>
 </body>
 </html>
