--- a/customer/signup.html
+++ b/customer/signup.html
@@ -20,7 +20,9 @@
         <label for="mobno">Mobile number:</label>
         <input type="number" id="mobno" name="mobno" required><br><br>
 
-        <input type="submit" value="Sign Up">
+        <input type="submit" value="Sign Up"><br><br>
+
+        <a href="signin.html">Have an account?</a>
     </form>
 </body>
 </html>
